# multi-tenant-milvus

./: .gitignore  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: chat_routes.py  collection_routes.py  embedding_routes.py
app/core/: config.py  milvus_client.py
app/models/: schemas.py
app/services/: collection_service.py  embedding_service.py
